# data-structures-and-algorithms

./: .gitignore  README.md
c/: CMakeLists.txt  README.md
c/algorithms/bfs/: bfs.h  bfs_test.c
c/algorithms/dfs/: dfs.c  dfs_test.c
c/algorithms/graph/bfs/: bfs.c  bfs_test.c
c/algorithms/graph/dfs/: dfs.h
c/algorithms/insertion-sort/: insertion_sort.c
c/algorithms/merge-sort/: merge_sort.h  merge_sort_test.c
c/algorithms/quick-sort/: quick_sort_test.c
c/algorithms/searching/binary-search/: binary_search.c  binary_search.h  binary_search_test.c
c/algorithms/sorting/insertion-sort/: insertion_sort.h  insertion_sort_test.c
c/algorithms/sorting/merge-sort/: merge_sort.c
c/algorithms/sorting/quick-sort/: quick_sort.c  quick_sort.h
c/data_structures/binary-search-tree/: bst.c  bst.h  bst_test.c
c/data_structures/deque/: deque.c  deque.h  deque_test.c
c/data_structures/disjoint-set/: disjoint_set.c  disjoint_set.h  disjoint_set_test.c
c/data_structures/doubly-linked-list/: doubly_linked_list.c  doubly_linked_list.h  doubly_linked_list_test.c
c/data_structures/dynamic-array/: dynamic_array.c  dynamic_array.h  dynamic_array_test.c
c/data_structures/hash-table/: hash_table_test.c
c/data_structures/hash-table-open-addressing/: hash_table.c  hash_table.h
c/data_structures/heap-binary-min/: heap.c  heap.h  heap_test.c
c/data_structures/queue/: queue.c  queue.h  queue_test.c
c/data_structures/singly-linked-list/: singly_linked_list.c  singly_linked_list.h  singly_linked_list_test.c
c/data_structures/stack/: stack.c  stack_test.c
c/include/dsa/: stack.h
c/src/: stack.c
c/tests/: CMakeLists.txt  test_stack.c
cpp/: CMakeLists.txt  README.md
cpp/algorithms/graph/bfs/: bfs.hpp  bfs_test.cpp
cpp/algorithms/graph/dfs/: dfs.hpp  dfs_test.cpp
cpp/algorithms/searching/binary-search/: binary_search.hpp  binary_search_test.cpp
cpp/algorithms/sorting/insertion-sort/: insertion_sort.hpp  insertion_sort_test.cpp
cpp/algorithms/sorting/merge-sort/: merge_sort.hpp  merge_sort_test.cpp
cpp/algorithms/sorting/quick-sort/: quick_sort.hpp  quick_sort_test.cpp
cpp/data_structures/binary-search-tree/: bst.hpp  bst_test.cpp
cpp/data_structures/deque/: deque.hpp  deque_test.cpp
cpp/data_structures/disjoint-set/: disjoint_set.hpp  disjoint_set_test.cpp
cpp/data_structures/doubly-linked-list/: doubly_linked_list.hpp  doubly_linked_list_test.cpp
cpp/data_structures/dynamic-array/: dynamic_array.hpp  dynamic_array_test.cpp
cpp/data_structures/hash-table/: hash_table.hpp  hash_table_test.cpp
cpp/data_structures/heap-binary-min/: heap.hpp  heap_test.cpp
cpp/data_structures/queue/: queue.hpp  queue_test.cpp
cpp/data_structures/singly-linked-list/: singly_linked_list.hpp  singly_linked_list_test.cpp
cpp/data_structures/stack/: stack.hpp  stack_test.cpp
csharp/: DSA.sln  README.md
csharp/src/: DSA.csproj
csharp/src/Algorithms/: BFS.cs  BinarySearch.cs  DFS.cs  Graph.cs  InsertionSort.cs  MergeSort.cs  QuickSort.cs
csharp/src/DataStructures/: BinarySearchTree.cs  Deque.cs  DisjointSet.cs  DoublyLinkedList.cs  DynamicArray.cs  HashTable.cs  MinHeap.cs  Queue.cs  SinglyLinkedList.cs  Stack.cs
csharp/tests/: AlgorithmsTests.cs  DSA.Tests.csproj  DataStructuresTests.cs
docs/: README.md
docs/algorithms/graph/: bfs.md  dfs.md
docs/algorithms/searching/: binary-search.md
docs/algorithms/sorting/: insertion-sort.md  merge-sort.md  (+1 more)
docs/data_structures/: binary-search-tree.md  deque.md  disjoint-set.md  doubly-linked-list.md  dynamic-array.md  hash-table.md  heap.md  queue.md  singly-linked-list.md  stack.md
elixir/: README.md  mix.exs
elixir/test/: algorithms_test.exs  data_structures_test.exs
go/: README.md  go.mod
go/algorithms/: algorithms_test.go  bfs.go  binary_search.go  dfs.go  graph.go  insertion_sort.go  merge_sort.go  quick_sort.go
go/datastructures/: binary_search_tree.go  datastructures_test.go  deque.go  disjoint_set.go  doubly_linked_list.go  dynamic_array.go  hash_table.go  min_heap.go  queue.go  singly_linked_list.go  stack.go
haskell/: README.md  dsa-haskell.cabal  package.yaml
haskell/src/Algorithms/: BFS.hs  BinarySearch.hs  DFS.hs  Graph.hs  InsertionSort.hs  MergeSort.hs  QuickSort.hs
haskell/src/DataStructures/: BinarySearchTree.hs  Deque.hs  DisjointSet.hs  DoublyLinkedList.hs  DynamicArray.hs  HashTable.hs  MinHeap.hs  Queue.hs  SinglyLinkedList.hs  Stack.hs
haskell/test/: AlgorithmsSpec.hs  DataStructuresSpec.hs
java/: README.md  pom.xml
julia/: Project.toml  README.md
julia/src/: DSA.jl
julia/test/: runtests.jl
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
lua/: README.md  init.lua
lua/algorithms/: bfs.lua  binary_search.lua  dfs.lua  graph.lua  insertion_sort.lua  merge_sort.lua  quick_sort.lua
lua/data_structures/: binary_search_tree.lua  deque.lua  disjoint_set.lua  doubly_linked_list.lua  dynamic_array.lua  hash_table.lua  min_heap.lua  queue.lua  singly_linked_list.lua  stack.lua
lua/tests/: test_all.lua
nim/: README.md  dsa.nimble
nim/src/: dsa.nim
nim/tests/: test_all.nim
php/: README.md  composer.json
php/tests/: AlgorithmsTest.php  DataStructuresTest.php
python/: README.md  pyproject.toml
python/src/dsa/: __init__.py
python/src/dsa/algorithms/: __init__.py  bfs.py  binary_search.py  dfs.py  graph.py  insertion_sort.py  merge_sort.py  quick_sort.py
python/src/dsa/data_structures/: __init__.py  binary_search_tree.py  deque.py  disjoint_set.py  doubly_linked_list.py  dynamic_array.py  hash_table.py  heap.py  queue.py  singly_linked_list.py  stack.py
python/tests/: test_algorithms.py  test_data_structures.py
ruby/: Gemfile  README.md
ruby/test/: algorithms_test.rb  data_structures_test.rb
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/tests/: tests.rs
scala/: README.md  build.sbt
swift/: Package.swift  README.md
typescript/: README.md  jest.config.js  package.json  tsconfig.json
typescript/src/: index.ts
typescript/tests/: algorithms.test.ts  data-structures.test.ts
zig/: README.md  build.zig
zig/src/: lib.zig
(+215 files in other folders)
