cabal-version: 2.4
name:          dsa-haskell
version:       1.0.0
synopsis:      Data Structures and Algorithms in Haskell
description:   A comprehensive collection of data structures and algorithms
license:       MIT
author:        DSA Contributors
maintainer:    dsa@example.com
build-type:    Simple

library
  exposed-modules:
    DataStructures.Stack
    DataStructures.Queue
    DataStructures.DynamicArray
    DataStructures.SinglyLinkedList
    DataStructures.DoublyLinkedList
    DataStructures.Deque
    DataStructures.HashTable
    DataStructures.BinarySearchTree
    DataStructures.MinHeap
    DataStructures.DisjointSet
    Algorithms.BinarySearch
    Algorithms.InsertionSort
    Algorithms.MergeSort
    Algorithms.QuickSort
    Algorithms.Graph
    Algorithms.BFS
    Algorithms.DFS
  build-depends:
    base >= 4.7 && < 5,
    containers,
    unordered-containers,
    hashable,
    vector,
    mtl
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite dsa-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    base >= 4.7 && < 5,
    dsa-haskell,
    hspec,
    QuickCheck
  default-language: Haskell2010
